--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "dev:server": "json-server server.json -w -d 400",
-    "build": "vite build --output public",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
